--- a/views/page-template.pug
+++ b/views/page-template.pug
@@ -1,9 +1,11 @@
-include ./navBar.pug
+include ./overlay.pug
 
 doctype html
 html
   head
     title= title
+    meta(name="viewport", content="width=device-width,initial-scale=1")
+
 
     // code highlighting
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css")
@@ -22,7 +24,7 @@ html
   body
     script.
       document.body.classList = localStorage.getItem("theme") || "light";
-    +navbar(navDirs, navLinks)
+    +overlay(navDirs, navLinks)
 
     div.content
       | !{content}
