--- a/views/styles.pug
+++ b/views/styles.pug
@@ -1,5 +1,5 @@
 // CSS
-link(rel="stylesheet", type="text/css", href="navBar.css")
+link(rel="stylesheet", type="text/css", href="overlay.css")
 link(rel="stylesheet", type="text/css", href="style.css")
 link(rel="stylesheet", type="text/css", href="code.css")
 link(rel="stylesheet", type="text/css", href="dark-theme.css")
