--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,12 @@
 }
 
 /* GENERAL */
-* { box-sizing: border-box; }
+* {
+    box-sizing: border-box;
+    transition-property: color, background-color, border-color;
+    transition-duration: .4s;
+    transition-timing-function: ease-in-out;
+}
 
 body {
     min-height: 100vh;
@@ -144,6 +149,7 @@ blockquote {
     border-radius: 2em;
     line-height: 1.3em;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: background-color 0.2s ease-in-out; 
 }
 
 .content > h2 + h3, .content > h3 + h4, .content > h4 + h5 {
@@ -253,13 +259,13 @@ blockquote {
     align-items: end;
 }
 
-.content #TOC, .content #TOC ul {
-    list-style-type: none;
-}
+.content #TOC, .content #TOC ul { list-style-type: none; }
 
 .content #TOC::before { display: none; }
 
 /* Nav folder and TOC folding */
-.titleClicked { transform: rotate(90deg); }
-
+.titleClicked {
+    transform: rotate(90deg);
+    transition: transform .2s ease;
+}
 
