--- a/public/dark-theme.css
+++ b/public/dark-theme.css
@@ -20,24 +20,24 @@ body.dark .index .subject { border-color: var(--dark-grey);}
 
 
 /* NAVBAR */
-body.dark #navBar {
+body.dark #nav-bar {
     background-color: var(--black);
     color: var(--white);
     scrollbar-color: var(--grey) var(--black);
 }
 
-body.dark #navBar a { color: var(--white) }
+body.dark #nav-bar a { color: var(--white) }
 
-body.dark #navBar a:hover, #navBar li.active a { color: var(--bright-pink); }
+body.dark #nav-bar a:hover, #nav-bar li.active a { color: var(--bright-pink); }
 
-body.dark .navBtn { background-color: var(--black); }
+body.dark .nav-btn { background-color: var(--black); }
 
-body.dark .navBtn:hover,
-body.dark #navBar .activeFolder { background-color: var(--grey); }
+body.dark .nav-btn:hover,
+body.dark #nav-bar .active-folder { background-color: var(--grey); }
 
-body.dark .folder li:not(.folded, .folderTitle),
-body.dark #navBar li.active,
-body.dark #navBar .folderTitle:hover:not(.activeFolder) {
+body.dark .folder li:not(.folded, .folder-title),
+body.dark #nav-bar li.active,
+body.dark #nav-bar .folder-title:hover:not(.active-folder) {
     background-color: var(--dark-grey);
 }
 
