--- a/views/overlay.pug
+++ b/views/overlay.pug
@@ -6,7 +6,7 @@ mixin navLink(name, endpoint, specialClass)
 // Navigation folder == a subject
 mixin navFolder(name, links)
     ul.folder
-      li.folderTitle
+      li.folder-title
         span(class="material-symbols-outlined ")= "chevron_right"
         span= name
       each page in links
@@ -14,30 +14,30 @@ mixin navFolder(name, links)
 
 // Navigation
 mixin navBar(dirs, links)
-  div.navContainer
-    div(id="navFoldBtn" class="navBtn")
+  div.nav-container
+    div(id="nav-fold-btn" class="nav-btn")
       span(class="material-symbols-outlined ")= "menu"
-    div(id="navBar")
+    div(id="nav-bar")
       a(class="title" href="/")= "Index"
       each files, folder in dirs
         +navFolder(folder, files)
-      ul.lonelyLink
+      ul.lonely-link
         each page in links
           +navLink(page.title, page.endpoint, "")
 
 // OVERLAY == navBar + utility buttons
 mixin overlay(dirs, links)
   +navBar(dirs, links)
-  div(id="themeBtn" class="navBtn")
+  div(id="theme-btn" class="nav-btn")
     span(class="material-symbols-outlined ")= "dark_mode"
-  div(id="toTopBtn" class="navBtn")
+  div(id="to-top-btn" class="nav-btn")
     span(class="material-symbols-outlined ")= "arrow_upward"
 
   script.
     // Folding the NavBar with the menu button
-    let navContainer = document.getElementsByClassName("navContainer")[0];
-    let navFoldBtn = document.getElementById("navFoldBtn");
-    let navBar = document.getElementById("navBar");
+    let navContainer = document.getElementsByClassName("nav-container")[0];
+    let navFoldBtn = document.getElementById("nav-fold-btn");
+    let navBar = document.getElementById("nav-bar");
 
     navFoldBtn.addEventListener("click", () => {
       navBar.style.left = navBar.style.left == "0px" ? "-20vw" : "0px";
@@ -60,12 +60,12 @@ mixin overlay(dirs, links)
 
     // Unfolding a folder
     function unfold(element){
-      element.classList.toggle("activeFolder");
-      element.firstChild.classList.toggle("titleClicked");
+      element.classList.toggle("active-folder");
+      element.firstChild.classList.toggle("folder-title-clicked");
       getSiblings(element).forEach(e => e.classList.toggle("folded"));
     }
 
-    let folders = document.getElementsByClassName("folderTitle");
+    let folders = document.getElementsByClassName("folder-title");
 
     // Collapsing folders
     for (let folder of folders){
@@ -78,13 +78,13 @@ mixin overlay(dirs, links)
     }
 
     // Handles dark/light mode
-    document.getElementById("themeBtn").addEventListener("click", () => {
+    document.getElementById("theme-btn").addEventListener("click", () => {
       localStorage.setItem("theme", document.body.classList.contains("dark") ? "light" : "dark");
       document.body.classList.toggle("dark")
     })
 
     // Scroll to top button
-    let scrollBtn = document.getElementById("toTopBtn");
+    let scrollBtn = document.getElementById("to-top-btn");
     
     // Appear after user has scrolled
     window.addEventListener("scroll", () => {
