je sais plus ou j'en etais

--- a/public/overlay.css
+++ b/public/overlay.css
@@ -10,8 +10,8 @@
     align-items: center;
     z-index: 1;
 
-    width: 3vw;
-    height: 3vw;
+    width: 2.5em;
+    height: 2.5em;
     margin: 1em;
 
     border-radius: 50%;
