--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,7 @@
 body {
     min-height: 100vh;
     height: fit-content;
+    width: 100vw;
     padding: 0;
     margin: 0;
     word-wrap: break-word;
