--- a/views/topic-template.pug
+++ b/views/topic-template.pug
@@ -21,15 +21,15 @@ html
   body
     script.
       document.body.classList = localStorage.getItem("theme") || "light";
-    +overlay(navDirs)
+    +overlay(navbarData)
 
     div.content
-      h1 Charlotte's Notes
+      h1= title
       p This is a collection of my Web Development notes so I can access it from anywhere with an internet connection.
       p These notes contain my work, and some text copied from software documentation.
 
       div.index
-        each files, folder in navDirs
+        each files, folder in navbarData
           if (folder !== 'root')
             p.subject= folder
             ul.index-list
