--- a/public/index.css
+++ b/public/index.css
@@ -2,12 +2,21 @@
 
 .index h2 { color: var(--bright-pink); }
 
-.index .subject {
+.index .topic {
+    display: block;
+    color: inherit;
+    width: 100%;
+    text-decoration: inherit;
     font-size: 1.2em;
     font-weight: 700;
     padding-bottom: 10px;
     border-bottom: 2px solid var(--beige);
     margin-bottom: 0;
+}
+
+.index .topic:hover {
+    padding-bottom: 10px;
+    border-bottom: 2px solid var(--beige);
 }
 
 .index-list { margin: 1vh 0 3vh 1vw; }
