--- a/views/overlay.pug
+++ b/views/overlay.pug
@@ -8,18 +8,18 @@ mixin navFolder(name, links)
     ul.folder
       li.folder-title
         span(class="material-symbols-outlined ")= "chevron_right"
-        span= name
+        a.topic(href=`/${name.toLowerCase()}`)= name
       each page in links
         +navLink(page.title, page.endpoint, "folded")
 
 // Navigation
-mixin navBar(dirs)
+mixin navBar(topics)
   div.nav-container
     div(id="nav-fold-btn" class="nav-btn")
       span(class="material-symbols-outlined ")= "menu"
     div(id="nav-bar")
       a(class="title" href="/")= "Index"
-      each files, folder in dirs
+      each files, folder in topics
         if (folder !== 'root')
           +navFolder(folder, files)
         else
