--- a/views/styles.pug
+++ b/views/styles.pug
@@ -1,9 +1,10 @@
 // CSS
-link(rel="stylesheet", type="text/css", href="overlay.css")
-link(rel="stylesheet", type="text/css", href="style.css")
-link(rel="stylesheet", type="text/css", href="code.css")
-link(rel="stylesheet", type="text/css", href="dark-theme.css")
-link(rel="stylesheet", type="text/css", href="reused.css")
+// link(rel="stylesheet", type="text/css", href="overlay.css")
+link(rel="stylesheet", type="text/css", href="styles.css")
+link(rel="stylesheet", type="text/css", href="variables.css")
+// link(rel="stylesheet", type="text/css", href="code.css")
+// link(rel="stylesheet", type="text/css", href="dark-theme.css")
+// link(rel="stylesheet", type="text/css", href="reused.css")
 
 // Fonts
 link(rel="preconnect", href="https://fonts.googleapis.com")
