--- a/views/topic-template.pug
+++ b/views/topic-template.pug
@@ -23,7 +23,7 @@ html
       document.body.classList = localStorage.getItem("theme") || "light";
     +overlay(navbarData)
 
-    div.content
+    div.page
       h1= title
 
       div.index
